# src/domain/types/apiSchema.ts
@@ -1,31 +1,19 @@
+import { ApiErrorCode, ApiSuccessCode } from '@domain/constants/apiCodes';
+import { ApiErrorCodes } from '@domain/constants/errorCodes';
 import { User } from '@domain/entities/User';
 
 export class ApiError extends Error {
-  status?: number;
-  success?: boolean;
-  code?: string;
-  data?: unknown;
-  message: string;
+  data: unknown;
+  status: number;
+  code: ApiErrorCode | ApiSuccessCode;
+  success: boolean;
 
-  constructor({
-    success,
-    message,
-    status,
-    code,
-    data,
-  }: {
-    success: boolean;
-    message?: string;
-    status?: number;
-    code?: string;
-    data?: unknown;
-  }) {
-    super(message);
-    this.success = success;
-    this.message = message ?? 'An unknown error occurred';
+  constructor({ message, data, status, code, success = false }: ApiResponse<unknown>) {
+    super(message ?? ApiErrorCodes.UNKNOWN_ERROR);
+    this.data = data;
     this.status = status;
     this.code = code;
-    this.data = data;
+    this.success = success;
   }
 }
 
@@ -36,10 +24,23 @@ export type ApiPromise<T = unknown> = Promise<ApiResponse<T>>;
  */
 export interface ApiResponse<T> {
   success: boolean;
-  data?: T;
-  status?: number;
+  data: T | null;
+  status: number;
   message?: string;
-  code?: string;
+  code: ApiErrorCode | ApiSuccessCode;
+}
+
+export interface ApiSuccessResponse<T> extends ApiResponse<T> {
+  success: true;
+  data: T | null;
+  code: ApiSuccessCode;
+}
+
+export interface ApiErrorResponse<T> extends ApiResponse<T> {
+  data: null;
+  success: false;
+  code: ApiErrorCode;
+  message: string;
 }
 
 /**
@@ -60,10 +61,7 @@ export type ForgotPasswordPayload = Pick<User, 'email'>;
 /**
  * Reset password
  */
-export interface ResetPasswordPayload {
-  token: string;
-  newPassword: string;
-}
+export type ResetPasswordPayload = Pick<User, 'password'> & { token: string };
 
 /**
  * Resend verification
